QA-10942 Fix overflow on pickers with footer buttons.

--- a/war/src/main/webapp/engines/jahia-anthracite/_components.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_components.scss
@@ -1477,6 +1477,10 @@ form,
 		height: 100%!important;
 		width: calc(100% - 10px)!important;
 
+		.modal-editorialpicker & {
+			height: calc(100% - 24px) !important;
+		}
+
 		body[data-indigo-gwt-panel-tab="JahiaGxtSidePanelTabs__JahiaGxtPagesTab"] & {
 			width: calc(100% - 25px) !important;
 		}
